# natural_nav

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  natural_nav.repos
.github/workflows/: ci.yml
docker/: entrypoint.sh
docs/: architecture.md  evaluation.md  limitations.md
docs/assets/: architecture-overview.excalidraw
scripts/: setup_groundingdino.sh  setup_ollama.sh
src/natural_nav/: package.xml  setup.cfg  setup.py
src/natural_nav/config/: naturalnav_params.yaml  robot1_bridge.yaml  robot2_bridge.yaml  waffle_bridge.yaml
src/natural_nav/launch/: naturalnav.launch.py  simulation.launch.py
src/natural_nav/natural_nav/: fleet_orchestrator.py  llm_client.py  llm_planner.py  projection.py  semantic_detector.py  semantic_map.py  spawn_helper.py
src/natural_nav/test/: test_projection.py
src/natural_nav/worlds/: naturalnav.world
