<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>natural_nav</name>
  <version>0.1.0</version>
  <description>LLM-orchestrated semantic navigation for multi-robot fleets</description>
  <maintainer email="adharsh.venkat98@gmail.com">Adharsh Venkat</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>nav2_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
